form/kubernetes/soya-form-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: soya
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soya-form
  namespace: soya
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soya-form
  template:
    metadata:
      name: soya-form
      labels:
        app: soya-form
    spec:
      containers:
      - name: soya-form
        image: oydeu/soya-form:latest
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: soya-form
  namespace: soya
spec:
  selector:
    app: soya-form
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soya-form
  namespace: soya
  annotations:
    certmanager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - soya-form.ownyourdata.eu
    secretName: soya-form-tls
  rules:
  - host: soya-form.ownyourdata.eu
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: soya-form
            port:
              number: 80
